fix: Dark mode

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,6 +35,17 @@ body {
   background: var(--primary-background);
 }
 
+// sass-lint:disable dark mode
+@media (prefers-color-scheme: dark) {
+  :root {
+    --primary: #fff;
+    --secondary: #007bff;
+    --primary-background: #343a40;
+    --secondary-background: #2c3035;
+  }
+}
+// sass-lint:enable dark mode
+
 @include breakpoint('s'){
   body {
     height: auto;
